<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="12dp"
    tools:context=".ViewMessageActivity"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:id="@+id/tvTituloActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tvTitle_textSize"
        android:background="@color/teal_200"
        android:textColor="@color/white"
        android:text="@string/tv2Message" />

    <TextView
        android:id="@+id/tvTituloRemitente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/remitente_titulo" />

    <TextView
        android:id="@+id/tvRemitente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/guion"/>

    <TextView
        android:id="@+id/tvTituloDestinatario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/destinatario_titulo" />

    <TextView
        android:id="@+id/tvDestinatario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/guion" />

    <TextView
        android:id="@+id/tvTituloMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/mensaje"/>

    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:contentDescription="@string/assetvector"
        app:srcCompat="@drawable/pulgar" />

</LinearLayout>